2005-01-17  C. Brian Jones  <cbj@gnu.org>

	* configure.ac: new file; thanks to gjdoc for many of the needed bits
	* acinclude.m4: new file
	* Makefile.am: new file
	* .cvsignore: new file
	* COPYING: new file
	* NEWS: new file
	* README: new file
	* AUTHORS: new file
	* autogen.sh: new file
	* bin: new directory
	* bin/javap: new file
	* bin/javah: new file
	* bin/serialver: new file
	* bin/localegen: new file
	* bin/currencygen: new file

2005-01-07  Mark Wielaard  <mark@klomp.org>

	* src/gnu/localegen/JavaGenerator.java:
	Don't generate inner classes deriving java.util.Hashtable, instead
	just use a java.util.Hashtable. Put all strings targeted for one
	Hashtable into one string. This saves much memory during compilation
	with gcj.

2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(computeCurrencies): Build two hashtables to store translated
	currencies in LocaleInformation.
	(computeContents): Call computeCurrencies.

	* src/gnu/ldml/Parser.java
	(Parser): Added new parse element to interpret currencies.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(classpathZoneOrder): Fixed order of entries.
	(TimeZoneContent.generateContent): Fixed array generation.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java (computeLocalNames):
	Generate data for localized variant names.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(computeLocalNames): Generate Hashtable for language names.

2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java: Do not specify validSubLocales explicitly.
	* src/gnu/localegen/JavaGenerator.java: Generate
	LocaleInformation.java from root locale.

2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java,src/gnu/ldml/Parser.java: Permit
	multiple locales per parser.
	* src/gnu/localegen/JavaGenerator.java,src/gnu/localegen/Main.java: