@@ -33,7 +33,6 @@ import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
 import org.xml.sax.XMLReader;
-import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
 public class Analyzer 
