@@ -1,8 +1,5 @@
 package gnu.ldml;
 
-import java.util.Enumeration;
-import java.util.ArrayList;
-
 public class DetailedListElement extends Element
 {
   public DetailedListElement(Parser p, Element parent, String name, String typeName)
